scode/MathCode/prob5/error.txt
  File "main.py", line 5
    While (n<nA):
                ^
SyntaxError: invalid syntax
